fix: button too small on 'Subscription' for tablet

--- a/assets/sass/_subscription.scss
+++ b/assets/sass/_subscription.scss
@@ -48,14 +48,13 @@
         margin: 0px auto;
         width: 80%;
         flex-direction: row;
-        align-items: center;
         flex-wrap: nowrap;
         filter: drop-shadow(0px 40px 20px rgba(0, 0, 0, 0.1));
 
         &__about {
             > h2 {
                 margin-left: 0px;
-                width: 20ch;
+                width: 16ch;
             }
         }
 
